--- a/react-refactor/package.json
+++ b/react-refactor/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "scripts": {
+    "dev": "webpack server",
     "build": "webpack",
-    "build:prod": "NODE_ENV=production webpack",
-    "dev": "webpack server"
+    "build:prod": "NODE_ENV=production webpack"
+    
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
